--- a/Back-end(Spring Boot)/LMS/src/main/resources/application.properties
+++ b/Back-end(Spring Boot)/LMS/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=LMS
-spring.datasource.url=jdbc:mysql://${mysql.railway.internal:localhost}:${3306:3306}/${libraryManagementSystem:lms}
+spring.datasource.url=jdbc:mysql://localhost:3306/libraryManagementSystem
 spring.datasource.username=root
-spring.datasource.password=${xpUQiegqFyWuVRKLbHKodeWPDUofEYKc:utsav45}
+spring.datasource.password=xpUQiegqFyWuVRKLbHKodeWPDUofEYKc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
