--- a/Back-end(Spring Boot)/LMS/src/main/resources/application.properties
+++ b/Back-end(Spring Boot)/LMS/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=LMS
-spring.datasource.url=jdbc:mysql://localhost:3306/libraryManagementSystem
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${libraryManagementSystem:lms}
 spring.datasource.username=root
-spring.datasource.password=xpUQiegqFyWuVRKLbHKodeWPDUofEYKc
+spring.datasource.password=DB_PASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
 
