--- a/Back-end(Spring Boot)/LMS/src/main/resources/application.properties
+++ b/Back-end(Spring Boot)/LMS/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=LMS
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${libraryManagementSystem:lms}
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${DB_NAME:lms}
 spring.datasource.username=root
 spring.datasource.password=DB_PASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
