--- a/Back-end(Spring Boot)/LMS/src/main/resources/application.properties
+++ b/Back-end(Spring Boot)/LMS/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=LMS
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${DB_NAME:lms}
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:utsav45}
+spring.datasource.url=jdbc:mysql://localhost:3306/lms
+spring.datasource.username=root
+spring.datasource.password=utsav45
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
-
